<resources>
    <string name="xposed_description">Utiliza funciones introducidas en Android P en tu dispositivo O!</string>
    <string name="pref_status_bar_title">Barra de estado</string>
    <string name="pref_status_bar_summary">Personaliza tu barra de estado</string>
    <string name="enable_left_clock_title">Reloj a la izquierda</string>
    <string name="enable_left_clock_summary">Mover el reloj de la barra de estado a la izquierda</string>
    <string name="force_dark_theme_title">Forzar tema oscuro</string>
    <string name="force_dark_theme_summary">Siempre usar tema oscuro para el panel de notificaciones (para 8.1)</string>
    <string name="module_not_activated_title">Modulo no activado!</string>
    <string name="module_not_activated_summary">Favor de activar el modulo en el Instalador Xposed</string>
    <string name="xposed_installer_not_found">Instalador Xposed no instalado. Favor de instalarlo primero.</string>
    <string name="preferences_not_readable_title">Preferencias no legibles!</string>
    <string name="settings_changed">Ajustes cambiados</string>
    <string name="settings_changed_description">Reiniciar para aplicar cambios</string>
    <string name="notif_channel_general_title">General</string>
    <string name="restart_systemui">Reiniciar interfaz del sistema</string>
    <string name="restart_broadcast_sent">Emisión de reinicio enviada</string>
    <string name="restart_android">Reiniciar Android</string>
    <string name="change_pull_down_title">Estilo de notificaciones y ajustes rapidos</string>
    <string name="change_pull_down_summary">Utilizar el nuevo estilo de Android P</string>
    <string name="pref_settings_title">Ajustes</string>
    <string name="pref_settings_summary">Personaliza tu aplicación de ajustes</string>
    <string name="pref_misc_title">Misceláneos/string>
    <string name="pref_misc_summary">Otros ajustes</string>
    <string name="change_settings_theme_title">Estilo de ajustes</string>
    <string name="change_settings_theme_summary">Utilizar el nuevo estilo de ajustes de Android P</string>
    <string name="about_title">Acerca de</string>
    <string name="about_pref_summary">Obtener mas información</string>
    <string name="about_share_title">Compartir</string>
    <string name="about_author_title">Autor</string>
    <string name="about_author_github">Ver en GitHub</string>
    <string name="share_with">Compartir \"%s\" con</string>
    <string name="share_text">Revisa \"%s\"\nhttps://github.com/paphonb/AndroidP-ify</string>
    <string name="version_text">Versión %s</string>
    <string name="circle_tile_background_title">Fondo redondo de ajustes rápidos</string>
    <string name="circle_tile_background_summary">Mostrar fondo redondo bajo los ajustes rápidos</string>
    <string name="qs_vertical_scroll_title">Desplazamiento vertical en los ajustes rápidos</string>
    <string name="qs_vertical_scroll_summary">Reemplazar ajustes rapidos paginados con rejilla vertical desplazable (muy inestable)</string>
    <string name="status_bar_alarm">Alarma</string>
    <string name="swap_qs_and_brightness_title">Intercambiar los ajustes rapidos y el deslizador de brillo</string>
    <string name="use_new_transitions_title">Usar nuevas transiciones</string>
    <string name="use_new_transitions_summary">Para cambiar entre aplicaciones</string>
    <string name="use_pixel_home_button_title">Botón de inicio de Pixel</string>
    <string name="use_pixel_home_button_summary">Habilitar el boton de inicion con estilo de Pixel con animaciones</string>
    <string name="please_install_pixel_navbar">Favor de instalar Pixel Navigation Bar desde Google Play</string>
    <string name="use_google_sans">Google Sans</string>
    <string name="use_google_sans_summary">Usar la fuente de Google Sans en varios lugares de la interfaz del sistema</string>
    <string name="proxy_overview_summary">Esto requiere el Pixel Launcher Q-4753642 para funcionar\nMuy experimental y puede ser removido en el futuro</string>
    <string name="proxy_overview_category">Aplicaciones recientes de Android P </string>
    <string name="enable_proxy_overview_title">Habilitar</string>
    <string name="proxy_package_title">Selecciona el lanzador para las aplicaciones recientes</string>
</resources>
    
