<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="change_pull_down"
        android:summary="@string/change_pull_down_summary"
        android:title="@string/change_pull_down_title"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_left_clock"
        android:summary="@string/enable_left_clock_summary"
        android:title="@string/enable_left_clock_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="force_dark_theme"
        android:summary="@string/force_dark_theme_summary"
        android:title="@string/force_dark_theme_title"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="circle_tile_background"
        android:summary="@string/circle_tile_background_summary"
        android:title="@string/circle_tile_background_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="qs_vertical_scroll"
        android:summary="@string/qs_vertical_scroll_summary"
        android:title="@string/qs_vertical_scroll_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="swap_qs_and_brightness"
        android:title="@string/swap_qs_and_brightness_title"/>
</PreferenceScreen>