<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="change_settings_theme"
        android:summary="@string/change_settings_theme_summary"
        android:title="@string/change_settings_theme_title"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="use_new_transitions"
        android:summary="@string/use_new_transitions_summary"
        android:title="@string/use_new_transitions_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="use_pixel_home_button"
        android:summary="@string/use_pixel_home_button_summary"
        android:title="@string/use_pixel_home_button_title"/>
</PreferenceScreen>